# connectfour-rl

./: CLAUDE.md  README.md  pyproject.toml  pytest.ini
scripts/: README.md  play_human.py
src/: game.py  model.py
tests/: test_game.py  test_model.py
