[tool.poetry]
name = "connectfour-rl"
version = "0.1.0"
description = "A performance-oriented Connect 4 agent using self-play RL"
authors = ["Ashish Neupane"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
numba = "^0.60.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.0.0"
pyright = "^1.1.0"
ruff = "^0.5.0"
ipython = "^8.20.0"
jupyterlab = "^4.0.0"
matplotlib = "^3.8.0"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"